# my-simple-contacts

./: .gitignore  AGENTS.md  Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_connection.py  test_db.py
database/: connector.py
templates/: create_contact.html  homepage.html
tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_routes.py
